# Asgore-Terminal-Rust-Node-Editor

./: Cargo.toml  README.md  TODO.md
AsgoreCore/: Cargo.toml
src/: editor.rs  main.rs
src/failed advanced ui attempt/: editor.rs  main.rs
