[package]
name = "AsgoreNodeEditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3"
colored = "2.0.0"
lazy_static = "1.4.0"
terminal_size = "0.2.6"
AsgoreCore = "0.1.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
