[package]
name = "AsgoreCore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
const_format = "0.2.30"
csv = "1.2.0"
eval = "0.4.3"
hex = "0.4.3"
lazy_static = "1.4.0"
regex = "1.7.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
